workshop/resources/chapter8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formation-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            backend:
              service:
                name: back-service
                port:
                  number: 80
            pathType: Prefix
          - path: /
            backend:
              service:
                name: front-service
                port:
                  number: 80
            pathType: Prefix
